# fastapi-confirm-acc-with-email

./: .env-template  .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_09_25_1517-77bc4d5e5c98_create_tables.py  2025_09_25_1531-d7890fc7df8d_create_tables.py  2025_09_25_1614-5d973566cc68_add_is_activated_field_to_users_table.py  2025_09_27_1442-f303454712a1_create_users_codes_table.py
src/: main.py
src/api/: __init__.py
src/api/auth/: dependencies.py  exc.py  routes.py  schemas.py  service.py
src/api/profiles/: schemas.py
src/api/users/: exc.py  routes.py  schemas.py  service.py
src/certs/: jwt-private.pem  jwt-public.pem
src/core/: __init__.py  base_service.py  config.py
src/core/models/: __init__.py  base.py  db_helper.py  profiles.py  users.py  users_codes.py
src/templates/: message.html
