[project]
name = "conf-acc-with-jwt-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.43",
    "taskiq>=0.11.18",
    "taskiq-aio-pika>=0.4.3",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
